--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"exports": "./index.js",
 	"types": "./index.d.ts",
 	"files": [
-		"index.js"
+		"index.js",
+		"index.d.ts"
 	],
 	"scripts": {
 		"test": "vitest"
